# Simulink_foot

./: .gitignore  Import_IMU.slx  Import_IMU.slx.autosave  Import_IMU.slx.original  Import_IMU.slxc  README.md  dual_fivebar_plot.m  dual_leg_init.m  fivebar_animation_compare_plot.m  fivebar_plot.m  fivebar_plot_smooth.m  joint_calibration.m  testing_DM_hby.slx  testing_DM_hby.slx.autosave  testing_DM_hby.slxc
Import_IMU_ert_rtw/: Import_IMU.cpp  Import_IMU.h  Import_IMU_data.cpp  Import_IMU_private.h  Import_IMU_types.h  MW_target_hardware_resources.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  main.cpp  ros2ModelInfo.mat  ros2nodeinterface.cpp  ros2nodeinterface.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  slros2_initialize.cpp  slros2_initialize.h  slros_busmsg_conversion.h
Import_IMU_ert_rtw/tmwinternal/: simulink_cache.xml  tr
backup_generated_src_before_home_migration_20260627_160356/custom_msgs/: CMakeLists.txt  package.xml  packageInfo.mat
backup_generated_src_before_home_migration_20260627_160356/testing_dm_hby/: CMakeLists.txt  package.xml  packageInfo.mat
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
log/: latest_build
slprj/_jitprj/: jitEngineAccessInfo.mat  s2Jc3fhgX0glHZqoYZwypzG.l  s2Jc3fhgX0glHZqoYZwypzG.mat  s308KiWGpL4eQtHU1RYhB8.l  s308KiWGpL4eQtHU1RYhB8.mat  s5BNoL7n7ys4s6V10zzf5mC.l  s5BNoL7n7ys4s6V10zzf5mC.mat  s8k49vWkNaSc2Fk2m4yYTGF.l  s8k49vWkNaSc2Fk2m4yYTGF.mat  s9C3a7AGSgLgMbzFRIb6zvF.l  s9C3a7AGSgLgMbzFRIb6zvF.mat  sAWShtZGg7M3yP42RsVe3bH.l  sAWShtZGg7M3yP42RsVe3bH.mat  sB6lcVbvzW3rhrDpXCZwAZE.l  sB6lcVbvzW3rhrDpXCZwAZE.mat  sDbKsln6atniYshgBPQTiXD.l  sDbKsln6atniYshgBPQTiXD.mat  sFdpUSUU1aLtybXUYoDEcFG.l  sFdpUSUU1aLtybXUYoDEcFG.mat  sGf9MmvXx5kv6Ykesw7hffC.l  sGf9MmvXx5kv6Ykesw7hffC.mat  sJbGgun1oc49TgOl2oZhow.l  sJbGgun1oc49TgOl2oZhow.mat  (+54 more)
src/import_imu/: CMakeLists.txt  package.xml  packageInfo.mat
src/import_imu/include/import_imu/: Import_IMU.h  Import_IMU_private.h  Import_IMU_types.h  ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros2_initialize.h  slros_busmsg_conversion.h  visibility_control.h
src/import_imu/src/: Import_IMU.cpp  Import_IMU_data.cpp  main.cpp  ros2nodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros2_initialize.cpp  slros_busmsg_conversion.cpp
testing_DM_hby_ert_rtw/: MW_custom_RTOS_header.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  compileInfo.mat  ert_main.cpp  main.cpp  ros2ModelInfo.mat  ros2nodeinterface.cpp  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  slros2_initialize.cpp  slros2_initialize.h  testing_DM_hby.cpp  testing_DM_hby.h  testing_DM_hby_data.cpp  testing_DM_hby_private.h  testing_DM_hby_types.h
(+255 files in other folders)
